Bug 1307853 - Set inline-resize flag when the content-box size is changing (in addition to border-box).  r=mats

MozReview-Commit-ID: FjUwuQB8g5j